Fix: Documentation error on CreatePost handler
